# mgi-desktop

./: .env.example  README.md  capacitor.config.ts  package.json  vite.config.ts
public/: manifest.webmanifest
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: zai-logo.png.asset.json
src/components/mgi/: MarkdownMessage.tsx  MgiLogo.tsx  OfflineBanner.tsx  ThemeController.tsx
src/lib/mgi/: attachments.ts  backup.ts  memory.ts  models.ts  openrouter.ts  pwa-register.ts  secure-storage.ts  store.ts  themes.ts  tokens.ts  types.ts
src/routes/: __root.tsx  index.tsx  memory.tsx  settings.tsx
