[package]
name = "mgi-desktop"
version = "1.0.0"
description = "Monty's GLM Interface (Desktop Edition)"
authors = ["Monty"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mgi_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
